# chess-coach

./: .env.example  .gitignore  README.md  main.py  start-pipecat.command  start.command
pipecat_poc/: README.md  config.example.env  main.py  pyproject.toml  web.py
pipecat_poc/output/: mic-realtime-20260224-231840.txt  mic-transcribe-20260224-230822.txt  voice-loop-20260224-232452.reply.txt  voice-loop-20260224-232452.transcript.txt  voice-loop-20260224-232813.reply.txt  voice-loop-20260224-232813.transcript.txt  voice-loop-20260224-234652.reply.txt  voice-loop-20260224-234652.transcript.txt  voice-loop-20260224-234706.reply.txt  voice-loop-20260224-234706.transcript.txt  voice-loop-20260225-200432.reply.txt  voice-loop-20260225-200432.transcript.txt  voice-loop-20260225-200440.reply.txt  voice-loop-20260225-200440.transcript.txt  voice-loop-20260225-201351.reply.txt  voice-loop-20260225-201351.transcript.txt  voice-loop-20260225-203244.reply.txt  voice-loop-20260225-203244.transcript.txt  voice-loop-20260225-203250.reply.txt  voice-loop-20260225-203250.transcript.txt  voice-loop-20260225-203841.reply.txt  voice-loop-20260225-203841.transcript.txt  voice-loop-20260225-203942.reply.txt  voice-loop-20260225-203942.transcript.txt  voice-loop-20260225-205355.reply.txt  voice-loop-20260225-205355.transcript.txt  voice-loop-20260225-211738.reply.txt  voice-loop-20260225-211738.transcript.txt  voice-loop-20260225-211800.reply.txt  voice-loop-20260225-211800.transcript.txt  voice-loop-20260225-212352.reply.txt  voice-loop-20260225-212352.transcript.txt  (+9 more)
